unpackaged/main/default/objects/Areas_of_Improvement__c/Areas_of_Improvement__c.object-meta.xml
<CustomObject>
    <label>Areas of Improvement</label>
    <nameField>
        <displayFormat>AOI-{0000000}</displayFormat>
        <label>Areas of Improvement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Areas of Improvement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>