unpackaged/main/default/objects/Areas_of_Improvement__c/fields/Capability_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Capability_Improvements__c</fullName>
    <description>B2C and Cultural Training</description>
    <inlineHelpText>B2C and Cultural Training</inlineHelpText>
    <label>Capability Improvements</label>
    <type>TextArea</type>
</CustomField>