unpackaged/main/default/objects/Areas_of_Improvement__c/fields/Customer_Journey_Experience_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey_Experience_Improvements__c</fullName>
    <description>Marketing and Digital</description>
    <inlineHelpText>Marketing and Digital</inlineHelpText>
    <label>Customer Journey/Experience Improvements</label>
    <type>TextArea</type>
</CustomField>