unpackaged/main/default/objects/Areas_of_Improvement__c/fields/Head_Office_Shop__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Shop__c</fullName>
    <label>Head Office/Shop</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>