unpackaged/main/default/objects/Areas_of_Improvement__c/fields/Operational_and_Technical_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Operational_and_Technical_Improvements__c</fullName>
    <description>Issuing and Acquiring</description>
    <inlineHelpText>Issuing and Acquiring</inlineHelpText>
    <label>Operational and Technical Improvements</label>
    <type>TextArea</type>
</CustomField>