unpackaged/main/default/objects/Areas_of_Improvement__c/fields/Reporting_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Improvements__c</fullName>
    <description>Sales and Business Intelligence</description>
    <inlineHelpText>Sales and Business Intelligence</inlineHelpText>
    <label>Reporting Improvements</label>
    <type>TextArea</type>
</CustomField>